--- a/src/ApkReader.Standard/ApkReader.Standard.csproj
+++ b/src/ApkReader.Standard/ApkReader.Standard.csproj
@@ -1,9 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.4</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <AssemblyName>ApkReader</AssemblyName>
     <RootNamespace>ApkReader</RootNamespace>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\..\build\lib\</OutputPath>
+    <DocumentationFile>..\..\build\lib\netstandard1.3\ApkReader.xml</DocumentationFile>
   </PropertyGroup>
 
   <Import Project="..\ApkReader\ApkReader.projitems" Label="Shared" />
