--- a/src/ApkReader.Standard/ApkReader.Standard.csproj
+++ b/src/ApkReader.Standard/ApkReader.Standard.csproj
@@ -11,9 +11,14 @@
     <DocumentationFile>..\..\build\lib\netstandard1.3\ApkReader.xml</DocumentationFile>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;DEBUG;NETSTANDARD1_3</DefineConstants>
+  </PropertyGroup>
+
   <Import Project="..\ApkReader\ApkReader.projitems" Label="Shared" />
 
   <ItemGroup>
+    <PackageReference Include="System.Xml.ReaderWriter" Version="4.3.0" />
     <PackageReference Include="System.Xml.XmlDocument" Version="4.3.0" />
   </ItemGroup>
 
