至今仍然不知道如何解析启动类名

--- a/src/ApkReader.Run/ApkReader.Run.csproj
+++ b/src/ApkReader.Run/ApkReader.Run.csproj
@@ -60,5 +60,8 @@
       <Name>ApkReader.Net40</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="wx.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
