--- a/src/ApkReader.Standard/ApkReader.Standard.csproj
+++ b/src/ApkReader.Standard/ApkReader.Standard.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard1.3</TargetFramework>
     <AssemblyName>ApkReader</AssemblyName>
     <RootNamespace>ApkReader</RootNamespace>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
